// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductHome Snapshot Test renders correctly with all props given error 1`] = `
<div
  className="styles__Alert-sc-1ldttm7-11 bxELWj"
>
  <div
    className="styles__Row-sc-1ldttm7-2 iMcGKE"
  >
    <strong>
      Test
    </strong>
  </div>
</div>
`;

exports[`ProductHome Snapshot Test renders correctly with all props given isLoading - false 1`] = `
<div
  className="styles__Container-sc-1ldttm7-0 chTCyR"
>
  <div
    className="styles__Row-sc-1ldttm7-2 style__Card-sc-1rp0p1n-0 kkqgzJ"
  >
    <div
      className="styles__Col-sc-1ldttm7-1 bTiKQz"
    >
      <div
        className="styles__Row-sc-1ldttm7-2 style__CardRow-sc-1rp0p1n-2 hSSDTv"
      >
        <div
          className="style__ProductName-sc-1rp0p1n-1 lgSegm"
        >
          Current A/C
        </div>
        <div
          className="style__AccountNumber-sc-1rp0p1n-3 ghNEoX"
        >
          122111/122212
        </div>
      </div>
      <div
        className="styles__Row-sc-1ldttm7-2 style__CardRow-sc-1rp0p1n-2 hSSDTv"
      >
        <div
          className="style__Currency-sc-1rp0p1n-5 XQCQa"
          size={36}
        >
          <div
            className="currency__TextStyle-sc-1uazvwe-0 kMHNch"
          >
            £1,121.11
          </div>
        </div>
        <div
          className="style__BalanceLabel-sc-1rp0p1n-4 gFnvle"
        >
          Current Balance
        </div>
      </div>
      <div
        className="styles__Row-sc-1ldttm7-2 style__CardRow-sc-1rp0p1n-2 hSSDTv"
      >
        <div
          className="style__Currency-sc-1rp0p1n-5 bqdoCa"
          size={22}
        >
          <div
            className="currency__TextStyle-sc-1uazvwe-0 kMHNch"
          >
            £12,212.12
          </div>
        </div>
        <div
          className="style__BalanceLabel-sc-1rp0p1n-4 gFnvle"
        >
          Available Balance
        </div>
      </div>
    </div>
    <div
      className="styles__Col-sc-1ldttm7-1 style__NavItems-sc-1rp0p1n-6 bozNBC"
    >
      <a
        href="/product/SA001"
        onClick={[Function]}
      >
        <button
          className="styles__Button-sc-1ldttm7-3 styles__ButtonPrimary-sc-1ldttm7-4 jkYupd"
        >
          More Details
        </button>
      </a>
    </div>
  </div>
  <div
    className="styles__Row-sc-1ldttm7-2 style__Card-sc-1rp0p1n-0 kkqgzJ"
  >
    <div
      className="styles__Col-sc-1ldttm7-1 bTiKQz"
    >
      <div
        className="styles__Row-sc-1ldttm7-2 style__CardRow-sc-1rp0p1n-2 hSSDTv"
      >
        <div
          className="style__ProductName-sc-1rp0p1n-1 lgSegm"
        >
          Saving A/C
        </div>
        <div
          className="style__AccountNumber-sc-1rp0p1n-3 ghNEoX"
        >
          111111/121212
        </div>
      </div>
      <div
        className="styles__Row-sc-1ldttm7-2 style__CardRow-sc-1rp0p1n-2 hSSDTv"
      >
        <div
          className="style__Currency-sc-1rp0p1n-5 XQCQa"
          size={36}
        >
          <div
            className="currency__TextStyle-sc-1uazvwe-0 kMHNch"
          >
            £11.11
          </div>
        </div>
        <div
          className="style__BalanceLabel-sc-1rp0p1n-4 gFnvle"
        >
          Current Balance
        </div>
      </div>
      <div
        className="styles__Row-sc-1ldttm7-2 style__CardRow-sc-1rp0p1n-2 hSSDTv"
      >
        <div
          className="style__Currency-sc-1rp0p1n-5 bqdoCa"
          size={22}
        >
          <div
            className="currency__TextStyle-sc-1uazvwe-0 kMHNch"
          >
            £1,212.12
          </div>
        </div>
        <div
          className="style__BalanceLabel-sc-1rp0p1n-4 gFnvle"
        >
          Available Balance
        </div>
      </div>
    </div>
    <div
      className="styles__Col-sc-1ldttm7-1 style__NavItems-sc-1rp0p1n-6 bozNBC"
    >
      <a
        href="/product/CA001"
        onClick={[Function]}
      >
        <button
          className="styles__Button-sc-1ldttm7-3 styles__ButtonPrimary-sc-1ldttm7-4 jkYupd"
        >
          More Details
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`ProductHome Snapshot Test renders correctly with all props given isLoading - true 1`] = `
<div
  className="styles__Row-sc-1ldttm7-2 iMcGKE"
>
  <div
    className="styles__Col-sc-1ldttm7-1 eeaKic"
  >
    <b>
      Loading...
    </b>
  </div>
</div>
`;
